# mTroll

./: .gitignore  .hgignore  CMakeLists.txt  CrossPlatform.h  README.md  build_mac.sh  mControlUI.sln  mTroll.sln  mTrollQt.sln  temp_build.sh  todo.txt  zipExe.bat  zipSrc.bat
.va/shared/SourceLinks/: 33afeb52-6b1a-4c3e-ae24-c30262499bdc.xsld
.va/shared/SourceLinks/PluginSettings/33afeb52-6b1a-4c3e-ae24-c30262499bdc/: 6866a04a-763d-4c08-a120-bc4b6cee4d76.xml
Engine/: AxeFx3EffectIds.h  AxeFx3Manager.cpp  AxeFx3Manager.h  AxeFxManager.cpp  AxeFxManager.h  AxeFxModel.h  AxeFxProgramChange.h  AxeMomentaryPatch.h  AxeTogglePatch.h  AxemlLoader.cpp  AxemlLoader.h  BaseSleepCommand.h  ClockCommands.h  CompositeTogglePatch.h  ControllerInputMonitor.cpp  ControllerInputMonitor.h  ControllerTogglePatch.h  CrossPlatform.h  DeletePtr.h  DynamicMidiCommand.cpp  DynamicMidiCommand.h  EdpIds.h  EdpManager.cpp  EdpManager.h  EngineLoader.cpp  EngineLoader.h  ExpressionPedalCurves.xlsx  ExpressionPedals.cpp  ExpressionPedals.h  HexStringUtils.cpp  HexStringUtils.h  IAxeFx.h  IInput.h  IMainDisplay.h  IMidiControlUi.h  IMidiIn.h  IMidiInGenerator.h  IMidiInSubscriber.h  IMidiOut.h  IMidiOutGenerator.h  (+39 more)
Monome40h/: FTD2XX.H  IMonome40h.h  IMonome40hInputSubscriber.h  Monome40h.h  Monome40hFtw.cpp  Monome40hFtw.h  MonomeSerialProtocol.h
Monome40h/40hFirmware/: adc.c  adc.h  as4-as6notes.txt  monome40h  monome40h.atsln  monome40h.aws  monome40h.cproj  monome40h.hex  monome40h.map
Monome40h/40hFirmware/PerLedIntensity(pwm)/: 40h.c  message.h
Monome40h/40hFirmware/avarice/: avarice.txt
Monome40h/40hFirmware/old.atmelStudio4/: Makefile  monome40h.aps
Monome40h/FTDI/Dynamic/amd64/: ftd2xx.lib
Monome40h/FTDI/Dynamic/i386/: FTD2XX.lib
Monome40h/FTDI/Static/amd64/: FTD2XX.lib
Monome40h/FTDI/Static/i386/: ftd2xx.lib
Monome40h/Win32/: DynamicFtd2xx.cpp  DynamicFtd2xx.h  Monome40hFtw.cpp  Monome40hFtw.h
Monome40h/notWin32/: FTTypes.h
Monome40h/qt/: Monome40hFtqt.cpp  Monome40hFtqt.h
data/: 1024x600.ui.xml  1280x800.ui.xml  Axefx3Patches.patchesConfig.xml  Axefx3Presets.patchesConfig.xml  autoGrid.ui.xml  axefx.config.xml  axefx2.config.xml  axefx2.default.axeml  axefx3.config.xml  axefx3v2.config.xml  default.axeml  edp.patchesConfig.xml  eeek.ui.xml  empty.patchesConfig.xml  gear.txt  large.ui.xml  largesean.ui.xml  microcosm.patchesConfig.xml  mtrollConfig.xsl  sean.config.xml  sean.ui.xml  testdata.config.xml  testdata.ui.xml  testdata2.ui.xml  testdataWithErrors.config.xml  testdataWithXsl.config.xml
data/testdata/: mtrollConfig.xsl  testdata.ui.xml  testdata2.ui.xml
docs/: axe.md  changelog.md  docs.md  xmlDataFiles.md
mControlUI/: ATLLabel.h  AboutDlg.cpp  AtlLed.h  AutoLockCs.h  KeepDisplayOn.h  MainFrm.cpp  MainFrm.h  WinMidiOut.cpp  WinMidiOut.h  large.ui.xml  mControlUI.cpp  mControlUI.h  mControlUI.rc  mControlUI.vcproj  mControlUIView.cpp  mControlUIView.h  mTroll.vcproj  resource.h  stdafx.cpp  stdafx.h  test.xml  testdata.config.xml  testdata.ui.xml  ui.xml
mControlUI/Led/: LED.cpp  LED.h
mControlUI/Release/: testdata.config.xml  testdata.ui.xml
mTrollQt/: AboutDlg.cpp  AboutDlg.h  BuildDate.cpp  ControlUi.cpp  ControlUi.h  MainTrollWindow.cpp  MainTrollWindow.h  mTrollQt.ftdiDynamic.vcxproj  mTrollQt.vcproj  mTrollQt.vcxproj  mTrollQt.vcxproj.filters  main.cpp  qtNotes.txt
mTrollQt/win/: mTrollQt.rc  resource.h
midi/: MacMidiIn.cpp  MacMidiIn.h  MacMidiOut.cpp  MacMidiOut.h  SleepShort.cpp  SleepShort.h  WinMidiIn.cpp  WinMidiIn.h  WinMidiOut.cpp  WinMidiOut.h
setup/: mTrollSetup.iss  mTrollSetup32.iss  mTrollSetup64.iss  mTrollVersion.txt  readme.txt
tinyxml/: tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
winUtil/: KeepDisplayOn.h  Library.h  SEHexception.h  WinDark.cpp  WinDark.h
